recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:23: error: not found: value e
      return tree(x,e,angle,shrink)
                    ^